
add_subdirectory(learncommon)

add_subdirectory(hello)
add_subdirectory(triangle)
add_subdirectory(color)
add_subdirectory(texture)
add_subdirectory(light)
add_subdirectory(material)
add_subdirectory(lightmapping)
add_subdirectory(lightcasters)
add_subdirectory(multilights)
add_subdirectory(lighttool)
add_subdirectory(modelimport)
add_subdirectory(depthtest)
add_subdirectory(blendtest)